Hoje foi criado as páginas de planos, e a externa. A fonte foi ajustada, e tentei colocar uma cor de fundo padrao, mas ainda não deu certo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,14 @@
 @tailwind utilities;
 
 
+/* .bg-fundo{
+  @apply bg-primaria-200;
+}
+
+.text-texto{
+  @apply text-padrao-200;
+}
+
+.border-borda{
+  @apply border-linha-200;
+} */
