--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  @apply bg-primaria flex flex-col min-h-screen
+}
+
+
 
 /* .bg-fundo{
   @apply bg-primaria-200;
